feat: Add comprehensive RBAC management UI and testing infrastructure
Major Features Added:
- Complete RBAC administration interface accessible via /admin route
- Frontend components for managing users, roles, groups, and permissions
- Comprehensive testing suite with unit, integration, and UI tests
- Docker-integrated testing commands via ./docker-start.sh helper script

RBAC Management UI:
- AdminPage with tabbed interface for all RBAC management
- UserManagement: Create users, assign roles, manage permissions
- RoleManagement: Create/delete roles, manage role permissions
- GroupManagement: Create groups, assign users to groups
- PermissionOverview: View all permissions and role assignments
- Real-time updates and proper error handling throughout

Testing Infrastructure:
- 40+ unit tests for RBACService and User model (Vitest)
- 70+ integration tests for API endpoints and UI (Playwright)
- Complete test configuration with coverage reporting
- GitHub Actions workflow for automated testing
- Docker-integrated testing commands:
  - ./docker-start.sh test-setup (one-time setup)
  - ./docker-start.sh test (run all tests)
  - ./docker-start.sh test-unit (unit tests only)
  - ./docker-start.sh test-api (API tests only)
  - ./docker-start.sh test-ui (UI tests with Playwright)
  - ./docker-start.sh test-rbac (RBAC validation)
  - ./docker-start.sh test-cleanup (cleanup environment)

Enhanced Backend:
- Extended User model with role/group management methods
- Additional RBAC API endpoints for frontend management
- Improved RBACService with comprehensive user/group operations
- Enhanced server.js with all RBAC management routes

Documentation:
- Comprehensive TESTING.md with testing procedures
- DOCKER_TESTING.md for Docker testing integration
- Updated README.md with RBAC UI and testing information
- Enhanced QUICK_REFERENCE.md and SETUP.md
- Complete TEST_SUMMARY.md with testing overview

Technical Details:
- Permission-based access control for all admin features
- Respons

--- a/package.json
+++ b/package.json
@@ -8,7 +8,19 @@
     "dev:frontend": "vite",
     "dev:backend": "nodemon backend/server.js",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "npm run test:unit && npm run test:integration",
+    "test:unit": "vitest run --config tests/vitest.config.js",
+    "test:unit:watch": "vitest --config tests/vitest.config.js",
+    "test:unit:coverage": "vitest run --coverage --config tests/vitest.config.js",
+    "test:integration": "npm run test:api && npm run test:ui",
+    "test:api": "vitest run tests/integration/rbac-api.test.js --config tests/vitest.config.js",
+    "test:ui": "playwright test --config tests/playwright.config.js",
+    "test:ui:headed": "playwright test --headed --config tests/playwright.config.js",
+    "test:ui:debug": "playwright test --debug --config tests/playwright.config.js",
+    "test:rbac": "npm run test:unit tests/unit/rbac.test.js && npm run test:api",
+    "test:setup": "./docker-start.sh dev && sleep 10",
+    "test:cleanup": "./docker-start.sh stop"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -35,6 +47,11 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "concurrently": "^7.6.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "vitest": "^1.0.0",
+    "@vitest/coverage-v8": "^1.0.0",
+    "@playwright/test": "^1.40.0",
+    "supertest": "^6.3.3",
+    "jest": "^29.7.0"
   }
 }
