--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "vitest": "^1.0.0",
     "@vitest/coverage-v8": "^1.0.0",
     "@playwright/test": "^1.40.0",
-    "supertest": "^6.3.3",
-    "jest": "^29.7.0"
+    "supertest": "^6.3.3"
   }
 }
