fix: Add RBAC migration to CI database setup
The integration tests were failing with 403 Forbidden because the CI
database setup was only running init.sql but not the RBAC migration.

✅ Added database/migrate_add_rbac.sql to CI setup
✅ This creates roles, permissions, and admin user needed for tests
✅ Integration tests should now pass with proper RBAC system

The admin@demo.com user with super_admin role will now exist in the
test database, allowing the integration tests to authenticate properly.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,7 @@ jobs:
     - name: Setup test database
       run: |
         PGPASSWORD=tracker_password psql -h localhost -U tracker_user -d location_tracker_test -f database/init.sql
+        PGPASSWORD=tracker_password psql -h localhost -U tracker_user -d location_tracker_test -f database/migrate_add_rbac.sql
       env:
         PGPASSWORD: tracker_password
     
