feat: implement complete tenant isolation for multi-workspace support
This commit implements comprehensive tenant isolation to ensure complete data
separation between workspaces in the multi-tenant location tracker application.

## Problem
Objects from all workspaces were appearing on the same map due to JWT tokens
containing a fixed tenantId from the user's primary workspace. API calls weren't
properly switching tenant context when users switched between workspaces.

## Solution

### Backend Changes
- Enhanced authentication middleware to support X-Tenant-Id header for workspace switching
- Added tenant access verification before allowing workspace context switch
- Implemented effective tenant/user ID resolution for cross-workspace operations
- Updated all API endpoints to use req.user.effectiveTenantId and req.user.effectiveUserId
- Added validation for tenant name (trim whitespace, reject empty names)
- Improved tenant creation endpoint to properly validate input

### Frontend Changes
- Updated TenantContext to provide getApiHeaders() helper function
- Modified all API calls to include X-Tenant-Id header via getApiHeaders()
- Updated components: MapView, Sidebar, CreateObjectModal, ObjectDrawer
- Ensured proper tenant context is passed to all data-fetching operations

### Testing
- Created comprehensive tenant isolation tests (10 test cases)
  * Object isolation between workspaces
  * RBAC isolation (separate roles and users per workspace)
  * Type configuration isolation
  * Cross-tenant access prevention
  * Error handling for invalid/non-existent workspaces

- Created authentication middleware unit tests (14 test cases)
  * Tenant header processing
  * User ID resolution across workspaces
  * Permission loading for effective tenant
  * Error handling for invalid tokens and tenant IDs

- Updated workspace creation tests (15 test cases)
  * Workspace creation validation
  * RBAC initialization verification
  * Multi-workspace access control
  * Workspace isolati

--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "test:unit:watch": "vitest --config tests/vitest.config.js",
     "test:unit:coverage": "vitest run --coverage --config tests/vitest.config.js",
     "test:integration": "npm run test:api && npm run test:ui",
-    "test:api": "vitest run tests/integration/rbac-api.test.js tests/integration/workspace-creation.test.js --config tests/vitest.integration.config.js",
+    "test:api": "vitest run tests/integration/rbac-api.test.js tests/integration/workspace-creation.test.js tests/integration/tenant-isolation.test.js --config tests/vitest.integration.config.js",
     "test:api:simple": "vitest run tests/integration/rbac-api-simple.test.js --config tests/vitest.integration.config.js",
     "test:ui": "playwright test --config tests/playwright.config.js",
     "test:ui:headed": "playwright test --headed --config tests/playwright.config.js",
     "test:ui:debug": "playwright test --debug --config tests/playwright.config.js",
-    "test:rbac": "npm run test:unit tests/unit/rbac.test.js tests/unit/rbac-service.test.js && npm run test:api",
+    "test:rbac": "npm run test:unit tests/unit/rbac.test.js tests/unit/rbac-service.test.js tests/unit/auth-middleware.test.js && npm run test:api",
     "test:workspace": "vitest run tests/integration/workspace-creation.test.js --config tests/vitest.integration.config.js",
+    "test:isolation": "vitest run tests/integration/tenant-isolation.test.js --config tests/vitest.integration.config.js",
     "test:setup": "./docker-start.sh dev && sleep 10",
     "test:cleanup": "./docker-start.sh stop"
   },
