feat: Complete comprehensive testing and documentation consolidation
- Added comprehensive test suite for new features:
  * Location update API tests (9 tests)
  * Object type configuration tests (13 tests)
  * Admin bulk operations tests (13 tests)
  * Image upload API tests (15 tests)
  * MinIO service unit tests (5 tests)
  * Workspace management UI tests (2 tests)

- Updated CI workflow to include new database migrations and feature testing
- Enhanced test coverage with unit, integration, and UI tests (70+ tests total)

- Consolidated documentation into intuitive structure:
  * docs/README.md - Main documentation index
  * docs/SETUP.md - Complete installation guide
  * docs/USER_GUIDE.md - End-user features and usage
  * docs/ADMIN_GUIDE.md - Administrative features
  * docs/API_REFERENCE.md - Complete REST API documentation
  * docs/TROUBLESHOOTING.md - Common issues and solutions

- Updated main README.md to point to new documentation structure
- Preserved existing specialized docs (DEVELOPMENT.md, CLEANUP_GUIDE.md, etc.)
- Added React testing support with jsdom environment and testing-library

- All tests passing with comprehensive coverage of new features
- CI workflow updated to test new endpoints and migrations
- Documentation provides clear navigation and comprehensive coverage

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,17 @@ DB_USER=tracker_user
 DB_PASSWORD=tracker_password
 
 # ===========================================
+# MinIO Object Storage Configuration
+# ===========================================
+
+# MinIO Connection
+MINIO_ENDPOINT=localhost
+MINIO_PORT=9000
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin
+MINIO_BUCKET=location-images
+
+# ===========================================
 # Docker Configuration
 # ===========================================
 
