--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,8 @@ jobs:
         PGPASSWORD=tracker_password psql -h localhost -U tracker_user -d location_tracker_test -f database/migrate_add_created_by.sql
         PGPASSWORD=tracker_password psql -h localhost -U tracker_user -d location_tracker_test -f database/migrate_add_object_type_configs.sql
         PGPASSWORD=tracker_password psql -h localhost -U tracker_user -d location_tracker_test -f database/migrate_add_rbac.sql
+        PGPASSWORD=tracker_password psql -h localhost -U tracker_user -d location_tracker_test -f database/migrate_add_images.sql
+        PGPASSWORD=tracker_password psql -h localhost -U tracker_user -d location_tracker_test -f database/migrate_add_cascade_deletes.sql
       env:
         PGPASSWORD: tracker_password
     
@@ -124,6 +126,34 @@ jobs:
             -v || echo "Users endpoint failed"
         else
           echo "❌ Failed to get admin token"
+        fi
+    
+    - name: Test new features
+      run: |
+        echo "Testing new features..."
+        TOKEN=$(curl -s -X POST http://localhost:3001/api/auth/login \
+          -H "Content-Type: application/json" \
+          -d '{"email":"admin@demo.com","password":"password"}' | jq -r '.token')
+        
+        if [ "$TOKEN" != "null" ] && [ "$TOKEN" != "" ]; then
+          echo "✅ Testing object type configurations..."
+          curl -X GET http://localhost:3001/api/object-type-configs \
+            -H "Authorization: Bearer $TOKEN" \
+            -v || echo "Object type configs endpoint failed"
+          
+          echo "✅ Testing admin endpoints..."
+          curl -X GET http://localhost:3001/api/admin/tenants \
+            -H "Authorization: Bearer $TOKEN" \
+            -v || echo "Admin tenants endpoint failed"
+          
+          curl -X GET http://localhost:3001/api/admin/objects \
+            -H "Authorization: Bearer $TOKEN" \
+            -v || echo "Admin objects endpoint failed"
+          
+          echo "✅ New features endpoints are accessible"
+        else
+          echo "❌ Failed to get admin token for feature testing"
+          exit 1
         fi
     
     - name: Run API integration tests
