--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,10 +33,16 @@ services:
       - DB_NAME=location_tracker
       - DB_USER=tracker_user
       - DB_PASSWORD=tracker_password
+      - MINIO_ENDPOINT=minio
+      - MINIO_PORT=9000
+      - MINIO_ACCESS_KEY=minioadmin
+      - MINIO_SECRET_KEY=minioadmin
+      - MINIO_BUCKET=location-images
     volumes:
       - ./backend:/app/backend
     depends_on:
       - database
+      - minio
     restart: unless-stopped
 
   database:
@@ -52,8 +58,27 @@ services:
       - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
     restart: unless-stopped
 
+  minio:
+    image: minio/minio:latest
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      - MINIO_ROOT_USER=minioadmin
+      - MINIO_ROOT_PASSWORD=minioadmin
+    volumes:
+      - minio_data:/data
+    command: server /data --console-address ":9001"
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+
 volumes:
   postgres_data:
+  minio_data:
 
 networks:
   default:
