--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "jsonwebtoken": "^9.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.303.0",
+    "minio": "^7.1.3",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -44,6 +46,8 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.1.0",
@@ -51,6 +55,7 @@
     "autoprefixer": "^10.4.13",
     "concurrently": "^7.6.0",
     "jest": "^30.2.0",
+    "jsdom": "^27.3.0",
     "nodemon": "^2.0.20",
     "postcss": "^8.4.21",
     "supertest": "^6.3.4",
