fix: Separate Node.js and React test configurations to resolve CI jsdom errors
- Split vitest.config.js into separate configs for Node.js and React tests
- Created tests/vitest.react.config.js for React component tests with jsdom
- Updated tests/vitest.config.js to use Node environment for backend tests
- Updated package.json scripts to run both test suites separately
- Updated CI workflow to run both Node.js and React tests
- Resolves webidl-conversions/whatwg-url module conflicts in CI environment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,9 @@ jobs:
       run: npm ci
     
     - name: Run unit tests
-      run: npm run test:unit
+      run: |
+        npm run test:unit
+        npm run test:react
       env:
         NODE_ENV: test
         JWT_SECRET: test-jwt-secret-key-for-ci
