--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "dev:backend": "nodemon backend/server.js",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "npm run test:unit && npm run test:integration",
+    "test": "npm run test:unit && npm run test:react && npm run test:integration",
     "test:unit": "vitest run --config tests/vitest.config.js",
+    "test:react": "vitest run --config tests/vitest.react.config.js",
     "test:unit:watch": "vitest --config tests/vitest.config.js",
-    "test:unit:coverage": "vitest run --coverage --config tests/vitest.config.js",
+    "test:unit:coverage": "vitest run --coverage --config tests/vitest.config.js && vitest run --coverage --config tests/vitest.react.config.js",
     "test:integration": "npm run test:api && npm run test:ui",
     "test:api": "vitest run tests/integration/rbac-api.test.js tests/integration/workspace-creation.test.js tests/integration/tenant-isolation.test.js --config tests/vitest.integration.config.js",
     "test:api:simple": "vitest run tests/integration/rbac-api-simple.test.js --config tests/vitest.integration.config.js",
